# LinkedIn-Resume-Builder

./: README.md  reversetxt
linkedin_resume_builder/: README.md  pyproject.toml
linkedin_resume_builder/src/linkedin_resume_builder/: crew.py  main.py
linkedin_resume_builder/src/linkedin_resume_builder/config/: agents.yaml  tasks.yaml
linkedin_resume_builder/src/linkedin_resume_builder/tools/: linkedin_tool.py
