[project]
name = "linkedin_resume_builder"
version = "0.1.0"
description = "linkedin_resume_builder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
linkedin_resume_builder = "linkedin_resume_builder.main:run"
run_crew = "linkedin_resume_builder.main:run"
train = "linkedin_resume_builder.main:train"
replay = "linkedin_resume_builder.main:replay"
test = "linkedin_resume_builder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
